added ui.bootstrap and bootstrap

--- a/src/app/main.html
+++ b/src/app/main.html
@@ -1,4 +1,10 @@
 <div class="main-container">
+
+  <div class="row">
+    <div class="col-sm-6">1</div>
+    <div class="col-sm-6">1</div>
+  </div>
+
   <fountain-header></fountain-header>
   <main class="main">
     <fountain-title></fountain-title>
