testing ui.bootstrap

--- a/src/app/main.html
+++ b/src/app/main.html
@@ -5,6 +5,13 @@
     <div class="col-sm-6">1</div>
   </div>
 
+  <button type="button" class="btn btn-default" ng-click="isCollapsed = !isCollapsed">Toggle collapse Vertically</button>
+  <hr>
+  <div uib-collapse="isCollapsed">
+    <div class="well well-lg">Just trying UI.bootstrap</div>
+  </div>
+
+
   <fountain-header></fountain-header>
   <main class="main">
     <fountain-title></fountain-title>
