fixed importing templates

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  Build with ♥ by the&nbsp;
+  !! Build with ♥ by the&nbsp;
   <a href="https://github.com/orgs/FountainJS/people">
     FountainJS team
   </a>
