another way of importing bootstrap

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -3,4 +3,13 @@
   <a href="https://github.com/orgs/FountainJS/people">
     FountainJS team
   </a>
+
+
+  <pre>{{$ctrl.styles}}</pre>
+
+  <div class="spec" ng-class="$ctrl.styles.spec">
+    RED
+  </div>
+
+
 </footer>
