CSS modules - for build task

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -7,7 +7,7 @@
 
   <pre>{{$ctrl.styles}}</pre>
 
-  <div class="spec" ng-class="$ctrl.styles.spec">
+  <div ng-class="$ctrl.styles.myClass">
     RED
   </div>
 
