moved files to app dir

--- a/src/app/_bootstrap.scss
+++ b/src/app/_bootstrap.scss
@@ -5,7 +5,7 @@
 // Reset and dependencies
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/normalize";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/print";
-@import "bootstrap/icons";
+@import "../assets/bootstrap/icons";
 
 // Core CSS
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
