moved bootstrap styles

--- a/src/assets/bootstrap/_bootstrap.scss
+++ b/src/assets/bootstrap/_bootstrap.scss
@@ -5,7 +5,7 @@
 // Reset and dependencies
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/normalize";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/print";
-@import "../assets/bootstrap/icons";
+@import "./icons";
 
 // Core CSS
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
