added footer component

--- a/src/app/components/app/app.html
+++ b/src/app/components/app/app.html
@@ -1,3 +1,10 @@
 <div ng-class="$ctrl.styles.mainContainer">
-  main
+
+  <navbar></navbar>
+
+  <div class="container" role="main">
+    <h2>Test</h2>
+  </div>
+
+  <my-footer></my-footer>
 </div>
