--- a/src/app/components/app/app.html
+++ b/src/app/components/app/app.html
@@ -4,6 +4,9 @@
 
   <div class="container" role="main">
     <h2>Test</h2>
+
+    <button class="btn btn-success">Test success</button>
+
   </div>
 
   <my-footer></my-footer>
