--- a/src/assets/bootstrap/_bootstrap.scss
+++ b/src/assets/bootstrap/_bootstrap.scss
@@ -1,3 +1,6 @@
+// Overwrites
+@import "./overwrites";
+
 // Core variables and mixins
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/variables";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins";
