added about and dashboard sample pages

--- a/src/app/components/app/app.html
+++ b/src/app/components/app/app.html
@@ -3,9 +3,13 @@
   <navbar></navbar>
 
   <div class="container" role="main">
-    <h2>Test</h2>
 
-    <button class="btn btn-success">Test success</button>
+    <div ui-view>
+      <h2>Main</h2>
+      <button class="btn btn-success" uib-tooltip="bootstrap ui">Test success btn</button>
+
+    </div>
+
 
   </div>
 
