--- a/src/app/common/footer/footer.html
+++ b/src/app/common/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-class="$ctrl.styles['footer-container']">
     <hr>
     <footer>
         <p>&copy; 2016 Company, Inc.</p>
