--- a/src/app/common/navbar/navbar.html
+++ b/src/app/common/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default navbar-static-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -8,14 +8,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" ui-sref="app">Project name</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li ui-sref-active-eq="active"><a ui-sref="app">Home</a></li>
+                <li ui-sref-active-eq="active"><a ui-sref="app.dashboard">Dashboard</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li ui-sref-active-eq="active"><a ui-sref="app.about">About</a></li>
             </ul>
         </div><!--/.nav-collapse -->
-
     </div>
 </nav>
