--- a/src/app/common/navbar/navbar.html
+++ b/src/app/common/navbar/navbar.html
@@ -14,6 +14,7 @@
             <ul class="nav navbar-nav">
                 <li ui-sref-active-eq="active"><a ui-sref="app">Home</a></li>
                 <li ui-sref-active-eq="active"><a ui-sref="app.dashboard">Dashboard</a></li>
+                <li ui-sref-active-eq="active"><a ui-sref="app.techs">Technologies</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ui-sref-active-eq="active"><a ui-sref="app.about">About</a></li>
